@@ -21,7 +21,7 @@
 #
 #
 #
-# Translation last updated on 01-15-2004
+# Translation last updated on 01-29-2004
 
 
 ###############################################
@@ -59,6 +59,7 @@ custom-header-help: Allows a custom HTML snippet to be included in the top of ev
 Custom header: Custom header
 Yes: Yes
 No: No
+Edit: Edit
 custom-trailer-help: Allows a custom HTML snippet to be included at the end of every page.
 Custom trailer: Custom trailer
 preferred-view-help: Specifies the default view (Day, Week, Month, or Year).
@@ -69,6 +70,8 @@ Month: Month
 Year: Year
 display-weekends-help: Include weekends when viewing a week.
 Display weekends in week view: Display weekends in week view
+yearly-shows-events-help: On the yearly view, display days that contain events in a bold font.
+Display days with events in bold in year view: Display days with events in bold in year view
 display-desc-print-day-help: Include event descriptions in printer-friendly version of day view.
 Display description in printer day view: Display description in printer day view
 date-format-help: Specifies the preferred date format.
@@ -658,6 +661,11 @@ vCal File: vCal File
 
 
 ###############################################
+# Page: year.php
+#
+
+
+###############################################
 # Page: view_d.php
 #
 
@@ -766,11 +774,6 @@ Unnamed Event: Unnamed Event
 Scheduling Conflict: Scheduling Conflict
 conflicts with the following existing calendar entries: conflicts with the following existing calendar entries
 Event Imported: Event Imported
-
-
-###############################################
-# Page: year.php
-#
 
 
 ###############################################
